--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jagdish Kumar Hudda",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   }
 }
